...
          ),
        TabBar(
          controller: _tabs,
          tabs: [
            Tab(
              text: context.tr(
                'Articles',
                'المواد',
              ),
            ),
            Tab(
              text: context.tr(
                'Historique',
                'السجل',
              ),
            ),
            Tab(
              text: context.tr(
                'Demandes',
                'الطلبات',
              ),
            ),
          ],
        ),
        Expanded(
...
      children: [
        Row(
          children: [
            Expanded(
              child: Text(
                context.tr(
                  'Gestion du stock',
                  'تدبير المخزون',
                ),
                style: Theme.of(context).textTheme.headlineSmall?.copyWith(
                      fontWeight: FontWeight.w900,
                    ),
              ),
...
